@@ -1,4 +1,5 @@
 {{$NEXT}}
+          - Fix "Not a SCALAR reference at" error in shift method
 
 0.004     2016-07-10 14:15:35+02:00 Europe/Amsterdam
           - Made a much better split between list and iterator capabilities
